--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-router-dom": "^7.10.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.1.17",
-    "vite-express": "*"
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@types/react": "^19.1.2",
