--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,5 +13,8 @@
     "bookstore": "file:../..",
     "dotenv": "^17.2.3",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.2"
   }
 }
