--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
     "@tailwindcss/vite": "^4.1.18",
     "bookstore": "file:../..",
     "dotenv": "^17.2.3",
     "tailwindcss": "^4.1.18"
   },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.2"
-  }
+  "devDependencies": {}
 }
