--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 
 {
-  "buildCommand": "cd src/client && npm install && npm run build",
-  "outputDirectory": "src/client/dist",
-  "framework": "vite"
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
