--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-react": "^5.1.2",
+    "axis": "^1.0.0",
     "bookstore": "file:../..",
     "dotenv": "^17.2.3",
     "react": "^19.2.3",
