--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,6 +15,7 @@
     "axis": "^1.0.0",
     "bookstore": "file:../..",
     "dotenv": "^17.2.3",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
