--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "axis": "^1.0.0",
     "bookstore": "file:../..",
+    "daisyui": "^5.5.14",
     "dotenv": "^17.2.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.3",
